[package]
name = "droidid"
version = "0.1.0"
edition = "2021"
description = "Generate quirky, sci-fi droid-style IDs like R2-D2, M8iwB, or X7qL. Millions of unique, short, human-readable identifiers."
license = "MIT"
repository = "https://github.com/JDPlumbing/droidid"
readme = "README.md"
keywords = ["id", "uuid", "generator", "sci-fi", "names"]
categories = ["data-structures", "development-tools", "command-line-utilities"]


[dependencies]
rand = "0.9.2"
